fix: remove scrollbar when close modal

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -4,14 +4,15 @@
   left: 0;
 
   width: 100vw;
-  height: 100%;
-  min-height: 100%;
+  height: 100vh;
 
   padding: 16px;
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  overflow: hidden;
 
   background: var(--color-grey-1-opacity-5);
 }
